--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
           name: Back-end build
           command: |
             cd backend
-            # npm install
+            npm iiinstall
             npm run build
       - save_cache:
           paths: [backend/node_modules]
