--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -30,7 +30,7 @@ Resources:
           ToPort: 9100
           CidrIp: 0.0.0.0/0
   EC2Instance:
-    # Type: AWS::EC2::Instance
+    Type: AWS::EC2::Instance
     Properties:
       InstanceType: t2.micro
       SecurityGroups:
