--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,18 +19,17 @@ commands:
             aws cloudformation delete-stack --stack-name frontendStack
             aws s3 rm s3://udapeople-5ef1b --recursive
             
-  notify_on_failure:
-      steps:
-        - slack/notify:
-            event: fail
-            channel: $SLACK_DEFAULT_CHANNEL
-            template: basic_fail_1
-  notify_on_success:
-      steps:
-        - slack/notify:
-            event: pass
-            channel: $SLACK_DEFAULT_CHANNEL
-            template: success_tagged_deployment_1 
+  notify_slack_error:
+    steps:
+      - slack/notify:
+          event: fail
+          template: basic_fail_1
+
+  notify_slack_pass:
+    steps:
+      - slack/notify:
+          event: pass
+          template: basic_success_1
 
 
   revert-migrations:
@@ -88,8 +87,9 @@ jobs:
             npm iiinstall
             npm run build
 
-      - notify_on_failure
-        
+      - notify_slack_error
+      - notify_slack_pass
+
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
