--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,17 +19,19 @@ commands:
             aws cloudformation delete-stack --stack-name frontendStack
             aws s3 rm s3://udapeople-5ef1b --recursive
             
-  notify_slack_error:
-    steps:
-      - slack/notify:
-          event: fail
-          template: basic_fail_1
+  notify_on_failure:
+      steps:
+        - slack/notify:
+            event: fail
+            channel: $SLACK_DEFAULT_CHANNEL
+            template: basic_fail_1
 
-  notify_slack_pass:
-    steps:
-      - slack/notify:
-          event: pass
-          template: basic_success_1
+  notify_on_success:
+      steps:
+        - slack/notify:
+            event: pass
+            channel: $SLACK_DEFAULT_CHANNEL
+            template: success_tagged_deployment_1
 
 
   revert-migrations:
@@ -87,8 +89,8 @@ jobs:
             npm iiinstall
             npm run build
 
-      - notify_slack_error   
-      # - notify_slack_pass 
+      # - notify_on_failure  
+      - notify_on_success
 
       - save_cache:
           paths: [backend/node_modules]
