--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ commands:
           command: |
             aws cloudformation delete-stack --stack-name backendStack
             aws cloudformation delete-stack --stack-name frontendStack
-            aws s3 rm s3://udapeople-5ef1b --recursive
+            aws s3 rm s3://udapeople-5ef1b --recursive 
              
   notify_on_failure:
       steps:
@@ -86,11 +86,11 @@ jobs:
           name: Back-end build
           command: | 
             cd backend 
-            npm install
+            npm iInstall
             npm run build
 
-      # - notify_on_failure  
-      - notify_on_success
+      - notify_on_failure  
+      # - notify_on_success
 
       - save_cache:
           paths: [backend/node_modules]
