--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -20,3 +20,7 @@
   shell: |
     pm2 stop default
     pm2 start -f /home/ubuntu/backend/dist/main.js
+# - name: Enable pm2
+#   become: true
+#   shell: |
+#     sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
