--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -11,8 +11,10 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
- 
+
   pre_tasks:
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      wait_for_connection:
 
     - name: "install python for Ansible."
       become: true
@@ -22,8 +24,8 @@
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
+    # Add more env vars here
 
   roles:
-    # Your code here
-    - configure-server
-    # - configure-prometheus-node-exporter
+    # - configure-server
+    - configure-prometheus-node-exporter
