--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: "upgrade packages."
-  become: true
-  apt:
-    upgrade: "yes"
+# - name: "upgrade packages."
+#   become: true
+#   apt:
+#     upgrade: "yes"
 
 - name: "install dependencies."
   become: true
@@ -19,64 +19,37 @@
     production: yes
     state: present
 
-- name: Install docker packages
-  remote_user: ubuntu
+
+
+- name: "install docker."
+  become: true
   apt:
-    name: "{{ item }}"
-    state: present
+    name: ["docker.io"]
+    state: latest
     update_cache: yes
-  with_items:
-    - apt-transport-https
-    - ca-certificates
-    - curl
-    - software-properties-common
-  tags:
-    - docker
-- name: Add Docker s official GPG key
-  remote_user: ubuntu
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-  tags:
-    - docker
-- name: Verify that we have the key with the fingerprint
-  remote_user: ubuntu
-  apt_key:
-    id: 0EBFCD88
-    state: present
-  tags:
-    - docker
-- name: Set up the stable repository
-  remote_user: ubuntu
-  apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
-    state: present
-    update_cache: yes
-  tags:
-    - docker
-- name: Update apt packages
-  remote_user: ubuntu
-  apt:
-    update_cache: yes
-  tags:
-    - docker
-- name: Install docker
-  remote_user: ubuntu
-  apt:
-    name: docker-ce
-    state: present
-    update_cache: yes
-  #notify: Start docker on boot
-  tags:
-    - docker
-- name: Add remote "ubuntu" user to "docker" group
-  remote_user: ubuntu
-  user:
-    name: "ubuntu"
-    group: "docker"
-    append: yes
-  tags:
-    - docker
+
+# Uncomment the following to enable insecure registries with Docker
+#- name: ensure docker can use insecure registries in 10.11.0.0/16
+#  lineinfile: "dest=/etc/default/docker regexp=^DOCKER_OPTS line=DOCKER_OPTS='--insecure-registry 10.11.0.0/16'"
+
+# sudo usermod -aG docker root
+# - name: "Add remote ubuntu user to docker group"
+#   user:
+#     name: ubuntu
+#     groups: docker
+#     append: yes
+#   become: true
+
+- name: sudo usermod -aG docker root
+  become: True
+  shell:
+    cmd: "usermod -aG docker ubuntu"
+    chdir: .
+
+# - service: name=docker state=restarted
+#
+
+
 - name: Install docker-compose
   remote_user: ubuntu
   get_url: 
@@ -85,7 +58,7 @@
     mode: 'u+x,g+x,o+x'
 
 - copy:
-    src: /root/project/util/docker-compose.yml
+    src: /home/circleci/project/util/docker-compose.yml
     dest: /home/ubuntu/
 
 - name: Run PostgresQL DB
