--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,7 +123,7 @@ jobs:
           name: Test Back-end
           command: |
             # exit 0
-            # cd backend
+            cd backend
             npm run test
             
   scan-frontend:
@@ -136,7 +136,7 @@ jobs:
       - run:
           name: Scan front-end
           command: |
-            exit 0
+            # exit 0
             npm audit
 
   scan-backend:
@@ -149,7 +149,7 @@ jobs:
       - run:
           name: Scan Back-end
           command: |
-            exit 0
+            # exit 0
             npm audit
 
   deploy-infrastructure:
