--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -343,10 +343,10 @@ workflows:
       - build-backend
       #- test-frontend:
       #    requires: [build-frontend]
-      # - test-backend:
-      #    requires: [build-backend]
-      - scan-backend:
+      - test-backend:
          requires: [build-backend]
+      # - scan-backend:
+      #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
       # - deploy-infrastructure:
