--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -345,8 +345,8 @@ workflows:
       #    requires: [build-frontend]
       - test-backend:
          requires: [build-backend]
-      # - scan-backend:
-      #    requires: [build-backend]
+      - scan-backend:
+         requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
       # - deploy-infrastructure:
