--- a/backend/package.json
+++ b/backend/package.json
@@ -37,7 +37,6 @@
     "@nestjs/core": "^6.11.11",
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/jwt": "^6.0.0",
-    "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.11.11",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.3.4",
@@ -48,6 +47,7 @@
     "cli-color": "^1.3.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
+    "express": "^4.17.1",
     "express-jwt": "^5.3.1",
     "glee-jwks-rsa": "^1.1.0",
     "joi": "^14.3.1",
