--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,6 +150,7 @@ jobs:
           name: Scan Back-end
           command: |
             # exit 0
+            # npm install
             npm audit
 
   deploy-infrastructure:
