--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -150,7 +150,8 @@ jobs:
           name: Scan Back-end
           command: |
             # exit 0
-            # npm install
+            cd backend
+            npm install
             npm audit
 
   deploy-infrastructure:
