--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,8 +276,8 @@ jobs:
           command: |
             export BACKEND_PUBLIC_IP=$(aws ec2 describe-instances --region us-east-1 --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             
-            # URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
-            URL="http://g00gle.com"
+            URL="http://$BACKEND_PUBLIC_IP:3030/api/status"
+            # URL="http://g00gle.com"
             if curl -s --head ${URL}
             then
               echo "It worked!"
@@ -286,9 +286,9 @@ jobs:
               echo "Rolling Back"
               exit 1
             fi
-      - notify_on_failure
+      # - notify_on_failure
       # - notify_on_success
-      - destroy_environment
+      # - destroy_environment
       # - revert-migrations 
 
   cloudfront-update: 
@@ -340,31 +340,31 @@ workflows:
   default:
     jobs:
       #- build-frontend
-      - build-backend
+      # - build-backend
       #- test-frontend:
       #    requires: [build-frontend]
       # - test-backend:
       #    requires: [build-backend]
-      - scan-backend:
-         requires: [build-backend]
+      # - scan-backend:
+      #    requires: [build-backend]
       #- scan-frontend:
       #    requires: [build-frontend]
-      # - deploy-infrastructure:
-      #   # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters: 
-      #       branches: 
-      #         only: [master]   
-      # - configure-infrastructure: 
-      #     requires: [deploy-infrastructure]
-      # - run-migrations:  
-      #     requires: [configure-infrastructure]
-      # - deploy-frontend:
-      #    requires: [run-migrations]
-      # - deploy-backend:
-      #    requires: [run-migrations]
-      # - smoke-test
-      #    requires: [deploy-backend, deploy-frontend]
-      #- cloudfront-update:
-      #    requires: [smoke-test]
+      - deploy-infrastructure:
+        # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters: 
+            branches: 
+              only: [master]   
+      - configure-infrastructure: 
+          requires: [deploy-infrastructure]
+      - run-migrations:  
+          requires: [configure-infrastructure]
+      - deploy-frontend:
+         requires: [run-migrations]
+      - deploy-backend:
+         requires: [run-migrations]
+      - smoke-test:
+         requires: [deploy-backend, deploy-frontend]
+      - cloudfront-update:
+         requires: [smoke-test]
       #- cleanup:
       #    requires: [cloudfront-update]
